es-bs-base/scss/_nav.scss
// Base class
//
// Kickstart any navigation component with a set of style resets. Works with
// `<nav>`s, `<ul>`s or `<ol>`s.

.nav {
  display: flex;
  flex-wrap: wrap;
  padding-left: 0;
  margin-bottom: 0;
  list-style: none;
}

.nav-link {
  display: block;
  padding: $nav-link-padding-y $nav-link-padding-x;
  text-decoration: if($link-decoration == none, null, none);

  @include hover-focus() {
    text-decoration: none;
  }

  // Disabled state lightens text
  &.disabled {
    color: $nav-link-disabled-color;
    pointer-events: none;
    cursor: default;
  }
}

//
// Tabs
//

.nav-tabs {
  border-bottom: $nav-tabs-border-width solid $nav-tabs-border-color;

  .nav-link {
    margin-bottom: -$nav-tabs-border-width;
    border: $nav-tabs-border-width solid transparent;
    @include border-top-radius($nav-tabs-border-radius);

    @include hover-focus() {
      border-color: $nav-tabs-link-hover-border-color;
    }

    &.disabled {
      color: $nav-link-disabled-color;
      background-color: transparent;
      border-color: transparent;
    }
  }

  .nav-link.active,
  .nav-item.show .nav-link {
    color: $nav-tabs-link-active-color;
    background-color: $nav-tabs-link-active-bg;
    border-color: $nav-tabs-link-active-border-color;
  }

  .dropdown-menu {
    // Make dropdown border overlap tab border
    margin-top: -$nav-tabs-border-width;
    // Remove the top rounded corners here since there is a hard edge above the menu
    @include border-top-radius(0);
  }
}


//
// Pills
//

.nav-pills {
  .nav-link {
    @include border-radius($nav-pills-border-radius);
  }

  .nav-link.active,
  .show > .nav-link {
    color: $nav-pills-link-active-color;
    background-color: $nav-pills-link-active-bg;
  }
}


//
// Justified variants
//

.nav-fill {
  > .nav-link,
  .nav-item {
    flex: 1 1 auto;
    text-align: center;
  }
}

.nav-justified {
  > .nav-link,
  .nav-item {
    flex-basis: 0;
    flex-grow: 1;
    text-align: center;
  }
}


// Tabbable tabs
//
// Hide tabbable panes to start, show them when `.active`

.tab-content {
  > .tab-pane {
    display: none;
  }
  > .active {
    display: block;
  }
}

//
// EnergySage Global Navigation
//
@media only screen and (min-width: 992px) {
  // Desktop overlay that is displayed on navbar hovers
  // pull overlay up to avoid it from getting covered by other DOM elements
  .content-overlay {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: rgba(64, 64, 64, .45);
    display: none;
    z-index: 1000;
}
}

$energy-tips-icon: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24'><path d='M19.6413 8.0574C19.3505 4.47835 16.5544 1.53681 13.0089 1.06706C10.772 0.765078 8.53505 1.44734 6.86856 2.91251C5.19087 4.37769 4.229 6.49157 4.229 8.71729C4.229 11.4351 5.68299 13.9852 8.02056 15.3721C8.52387 15.6741 8.52387 15.7859 8.52387 15.9537V17.0162C8.52387 17.4748 8.90414 17.8551 9.36271 17.8551C9.82128 17.8551 10.2016 17.4748 10.2016 17.0162V15.9537C10.2016 14.8576 9.53048 14.3207 8.87059 13.9293C7.03632 12.8444 5.8955 10.8535 5.8955 8.71729C5.8955 6.9725 6.64487 5.31719 7.95346 4.16518C9.28442 3.00199 10.9957 2.49868 12.7628 2.72237C15.4918 3.08028 17.7176 5.42903 17.9524 8.18043C18.1538 10.6075 16.9235 12.8108 14.7537 13.9293C14.3286 14.153 13.3444 14.6563 13.3109 15.9649V16.9939C13.3109 17.4524 13.6911 17.8327 14.1497 17.8327C14.6083 17.8327 14.9885 17.4524 14.9885 16.9939V15.9872C14.9885 15.8195 14.9885 15.6964 15.5254 15.4168C18.3215 13.974 19.8874 11.1443 19.6301 8.03503L19.6413 8.0574Z' fill='#292929'/><path d='M14.4516 18.7499H9.45212C8.99356 18.7499 8.61328 19.1302 8.61328 19.5887C8.61328 20.0473 8.99356 20.4276 9.45212 20.4276H14.4516C14.9102 20.4276 15.2905 20.0473 15.2905 19.5887C15.2905 19.1302 14.9102 18.7499 14.4516 18.7499Z' fill='#292929'/><path d='M14.4516 21.3223H9.45212C8.99356 21.3223 8.61328 21.7025 8.61328 22.1611C8.61328 22.6197 8.99356 22.9999 9.45212 22.9999H14.4516C14.9102 22.9999 15.2905 22.6197 15.2905 22.1611C15.2905 21.7025 14.9102 21.3223 14.4516 21.3223Z' fill='#292929'/></svg>") !default;
$menu-icon: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' width='40' height='40' viewBox='0 0 24 24'><path fill-rule='evenodd' clip-rule='evenodd' d='M0 1C0 0.447715 0.447715 0 1 0L19 0C19.5523 0 20 0.447715 20 1C20 1.55228 19.5523 2 19 2H1C0.447715 2 0 1.55228 0 1ZM0 8C0 7.44772 0.447715 7 1 7H19C19.5523 7 20 7.44772 20 8C20 8.55229 19.5523 9 19 9H1C0.447715 9 0 8.55229 0 8ZM0 15C0 14.4477 0.447715 14 1 14H19C19.5523 14 20 14.4477 20 15C20 15.5523 19.5523 16 19 16H1C0.447715 16 0 15.5523 0 15Z' fill='#292929'/></svg>") !default;

.nav-es-global {
   // pull navbar up to avoid overlay from getting covered by other DOM elements
   z-index: 1000;

  // Hide the default BS4 expansion indicator
  .dropdown-toggle::after {
    content: none;
  }

  // Hide elements only needed for the mobile navigation
  .dropdown-label, .menu-checkbox, .menu-header, .menu-toggle, .expand-icon, .logo {
    display: none;
  }

  // On Desktop a hovers display the dropdowns
  @media only screen and (min-width: 992px) {
    // Allow dropdown content to take up the full width of the page
    .dropdown-full-page {
      position: static;
    }

    // Full expand top level nav's topics section
    .dropdown-menu-full-page {
      top: 45%;
      width: 100%;
    }

    // Show dropdown on nav-item hover in desktop view
    .nav-item:hover .dropdown-menu{
      display: block;
    }

    // Place EnergyTips topic in a row instead of a column on desktop dropdown
    .topic-group {
      float: left;
    }
  }

  // A lot of custom styles for the mobile navigation menu
  @media only screen and (max-width: 992px) {
    // Force navigation items to align to the top and avoid conflict with other components on the page
    .navbar-collapse {
      align-items: start;
      z-index: 1;
    }

    // Allow the dropdowns to overlap each other
    .dropdown {
      position: unset;
    }

    // Position the menu at the top (leave some room for the header -- this seems hacky, could we set this to top:0?)
    // Make menu scrollable, prevent it from making the page longer
    .dropdown-menu {
        top: 64px;
        max-height: 100%;
        overflow: scroll;
        padding: 0;
    }

    // Prevent horizontal scrolling on menu
    .dropdown-menu-full-page {
      display: flex !important;
    }

    // Hide the desktop dropdown toggle because mobile uses the labels as toggles
    .dropdown-toggle {
        display: none;
    }
    // Style the label as a proper tappable block target
    .dropdown-label {
        cursor: pointer;
        display: block;
    }

    // Override default blue background on hover and click
    .dropdown-item:hover, .dropdown-item:active {
      background: none;
    }

    // Show chevrons on mobile
    .expand-icon {
      display: flex;
    }

    // Style rows in hamburger, add bottom border
    .nav-item {
      height: 64px;
      margin: 0px 15px;
      border-bottom: solid #DBDBDB 1px !important;
      align-items: center;
    }

    // Override default margin to allow centered titles
    .dropdown-label.nav-link {
      margin-bottom: 0;
    }

    // Style the menu for mobile navigation bit but use translate to keep it off screen
    .menu {
        max-height: 100%;
        overflow: scroll;
        min-width: 260px;
        background: #fff;
        flex-direction: column;
        height: 100%;
        left: 0;
        min-height: 100vh;
        position: absolute;
        top: 0;
        transform: translate3d(-100%, 0, 0);
        transition: transform 0.2s;
        width: 100%;
    }

    // Avoid top level nav's subtopics level menu from laying on its topic level menu
    .submenu {
      position: fixed;
      z-index: 2;
    }

    // The menu after any checked checkboxes is translated on screen
    .menu-checkbox:checked + .menu {
        transform: translate3d(0, 0, 0);
    }

    // The menu header
    .menu-header {
        border-bottom: solid #DBDBDB 1px;
        display: flex;
        height: 64px;
        width: 100%;
        font-weight: bolder;
        align-items: center;
        max-height: 64px;
    }

    // This is a generic placeholder button for open/close/back in the mobile menu
    .menu-toggle {
        vertical-align: center;
        cursor: pointer;
        display: flex;
    }

    // Override BS4 defaults for consistency
    .menu {
      ul, li {
        border: none;
        width: 100%;
        display: block;
      }
      li {
        display: flex;
        justify-content: space-between;
      }
    }
  }
}

